顯示友善的錯誤葉面

--- a/ErrorHandleForWeb/Web.config
+++ b/ErrorHandleForWeb/Web.config
@@ -11,6 +11,9 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
   </appSettings>
   <system.web>
+    <!--標籤的位置很重要-->
+    <!--要注意的是，自訂錯誤的View名稱是固定的。Error.cshtml-->
+    <customErrors mode="On"></customErrors>
     <compilation debug="true" targetFramework="4.6.1"/>
     <httpRuntime targetFramework="4.6.1"/>
   </system.web>
