自訂要顯示處理錯誤的View

--- a/ErrorHandleForWeb/ErrorHandleForWeb.csproj
+++ b/ErrorHandleForWeb/ErrorHandleForWeb.csproj
@@ -103,6 +103,7 @@
     <Content Include="Views\web.config" />
     <None Include="packages.config" />
     <Content Include="Views\Shared\Error.cshtml" />
+    <Content Include="Views\Shared\Error2.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
