自訂404的種種方法

--- a/ErrorHandleForWeb/Web.config
+++ b/ErrorHandleForWeb/Web.config
@@ -13,7 +13,9 @@
   <system.web>
     <!--標籤的位置很重要-->
     <!--要注意的是，自訂錯誤的View名稱是固定的。Error.cshtml-->
-    <customErrors mode="On"></customErrors>
+    <customErrors mode="On">
+      <!--<error statusCode="404" redirect="~/404.html"/>-->
+    </customErrors>
     <compilation debug="true" targetFramework="4.6.1"/>
     <httpRuntime targetFramework="4.6.1"/>
   </system.web>
