--- a/ErrorHandleForWeb/ErrorHandleForWeb.csproj
+++ b/ErrorHandleForWeb/ErrorHandleForWeb.csproj
@@ -88,6 +88,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="404.html" />
     <Content Include="Global.asax" />
     <Content Include="Web.config" />
   </ItemGroup>
